Fixed the signup page.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="login-link">
                 <a href="./auth/login.php">Login</a>
             </div>
-            <!-- <div class="login-link">
+            <div class="login-link">
                 <a href="./auth/signup.php">Signup</a>
-            </div> -->
+            </div>
         </div>
         <img src="./images/headerLogo.png" />
         <div class="search-bar">
